--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="ResavationPlatForm">
+    <wb-module deploy-name="ReservationServlet">
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="ResavationPlatForm"/>
-        <property name="java-output-path" value="/ResavationPlatForm/build/classes"/>
+        <property name="context-root" value="ReservationServlet"/>
+        <property name="java-output-path" value="/ReservationServlet/build/classes"/>
     </wb-module>
 </project-modules>
